--- a/resources/css/typo/webfonts.css
+++ b/resources/css/typo/webfonts.css
@@ -3,18 +3,4 @@
  * -----------------------------------------------------------------------------
  */
 
-@font-face {
-  font-family: 'GTAmericaULt';
-  src: url('fonts/GT-America-Standard-Ultra-Light.woff2') format('woff2'), url('fonts/GT-America-Standard-Ultra-Light.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'GTAmericaULtIt';
-  src: url('fonts/GT-America-Standard-Ultra-Light-Italic.woff2') format('woff2'), url('fonts/GT-America-Standard-Ultra-Light-Italic.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100..900&display=swap');
