--- a/resources/views/partials/layout/body.antlers.html
+++ b/resources/views/partials/layout/body.antlers.html
@@ -1,5 +1,5 @@
 <body 
-  class="antialiased text-steel flex min-h-screen flex-col {{ page_class }}" 
+  class="antialiased text-steel font-roboto-condensed-regular flex min-h-screen flex-col {{ page_class }} {{ page_area }}" 
   x-data="{ menu: false }">
   {{ slot:header }}
   {{ slot }}
