--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -38,7 +38,7 @@
               target="_blank" 
               rel="noopener noreferrer"
               title="Lindenbaum auf Instagram">
-              {{ partial:icons/instagram class="block w-auto h-28 transition-all hover:text-light-grey" }}
+              {{ partial:icons/social/instagram class="block w-auto h-28 transition-all hover:text-cloud" }}
             </a>
           {{ /if }}
 
@@ -48,7 +48,7 @@
               target="_blank" 
               rel="noopener noreferrer"
               title="Lindenbaum auf Instagram">
-              {{ partial:icons/facebook class="block w-auto h-28 transition-all hover:text-light-grey" }}
+              {{ partial:icons/social/facebook class="block w-auto h-28 transition-all hover:text-cloud" }}
             </a>
           {{ /if }}
 
@@ -58,7 +58,7 @@
               target="_blank" 
               rel="noopener noreferrer"
               title="Lindenbaum auf Instagram">
-              {{ partial:icons/linkedin class="block w-auto h-28 transition-all hover:text-light-grey" }}
+              {{ partial:icons/social/linkedin class="block w-auto h-28 transition-all hover:text-cloud" }}
             </a>
           {{ /if }}
 
@@ -68,7 +68,7 @@
               target="_blank" 
               rel="noopener noreferrer"
               title="Lindenbaum auf Instagram">
-              {{ partial:icons/youtube class="block w-auto h-28 transition-all hover:text-light-grey" }}
+              {{ partial:icons/social/youtube class="block w-auto h-28 transition-all hover:text-cloud" }}
             </a>
           {{ /if }}
         </div>  
