--- a/resources/views/partials/layout/head.antlers.html
+++ b/resources/views/partials/layout/head.antlers.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<html lang="{{ site:short_locale }}" class="scroll-smooth overflow-y-scroll {{ page_class ?? '' }} theme-{{ page_theme }}">
+<html 
+  lang="{{ site:short_locale }}" 
+  class="scroll-smooth overflow-y-auto {{ page_class ?? '' }} theme-{{ page_theme }}"
+  :class="{ '!overflow-y-hidden': menu === true}"
+  x-data="{ menu: false, submenu: null }">
 <head>
 <meta charset="utf-8">
 {{ if is_homepage }}<title>Lindenbaum - Ausbildung und Wohnen in Pf&auml;ffikon ZH</title>{{ else }}<title>{{ open_graph_title ?? title ?? site:name }} | Lindenbaum - Ausbildung und Wohnen in Pf&auml;ffikon ZH</title>{{ endif }}
