--- a/resources/views/partials/layout/body.antlers.html
+++ b/resources/views/partials/layout/body.antlers.html
@@ -1,6 +1,4 @@
-<body 
-  class="antialiased text-steel font-roboto-condensed-regular flex min-h-screen flex-col" 
-  x-data="{ menu: false }">
+<body class="antialiased text-steel text-sm font-roboto-condensed-regular flex min-h-screen flex-col">
   {{ slot:header }}
   {{ slot }}
   {{ slot:footer }}
