--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -1,5 +1,5 @@
 <footer>
-  {{ partial:layout/inner class="p-25 md:p-40 w-full md:grid md:grid-cols-12 md:gap-x-0 lg:items-end" }}
+  {{ partial:layout/inner class="py-25 md:py-40 w-full md:grid md:grid-cols-12 md:gap-x-0 lg:items-end" }}
 
     <div class="md:col-span-8 lg:flex lg:items-end">
       {{ if contact_information:address }}
