--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -1,3 +1,7 @@
 {{ page_elements }}
   {{ partial:elements }}
 {{ /page_elements }}
+
+<figure>
+  <img src="/assets/dummy-header.jpg" width="1440" height="483" class="w-full h-full aspect-[16/10] lg:aspect-[16/8] object-cover" />
+</figure>
