--- a/resources/views/partials/layout/header.antlers.html
+++ b/resources/views/partials/layout/header.antlers.html
@@ -1,22 +1,13 @@
 {{# desktop header  #}}
-<header class="relative hidden md:block">
-    {{ partial:menu/wrapper }}
-    <a 
-      href="/" 
-      title="Startseite"
-      class="">
-      {{ partial:icons/logo/wrapper class="w-200 h-auto" }}
-    </a>
+<header class="relative hidden lg:bg-white lg:block lg:sticky lg:top-0 lg:z-100 lg:w-full lg:h-122">
+  {{ partial:layout/inner }}
+    {{ partial:menu/desktop/wrapper }}
+  {{ /partial:layout/inner }}
 </header>
 {{# mobile header  #}}
-<header class="sticky top-0 bg-red-200 w-full h-133 pt-30 px-20 z-100 md:hidden">
+<header class="bg-white sticky top-0 w-full h-133 pt-30 px-20 z-100 lg:hidden">
   <div class="relative">
-    <a 
-      href="/" 
-      title="Startseite"
-      class="">
-      {{ partial:icons/logo/wrapper class="w-200 h-auto" }}
-    </a>
+    {{ partial:menu/home }}
     {{ partial:menu/mobile/button }}
     {{ partial:menu/mobile/wrapper }}
   </div>
