--- a/resources/views/partials/layout/header.antlers.html
+++ b/resources/views/partials/layout/header.antlers.html
@@ -1,6 +1,6 @@
 {{# desktop header  #}}
 <header class="relative hidden lg:bg-white lg:block lg:sticky lg:top-0 lg:z-100 lg:w-full lg:h-122">
-  {{ partial:layout/inner }}
+  {{ partial:layout/inner class="!my-0" }}
     {{ partial:menu/desktop/wrapper }}
   {{ /partial:layout/inner }}
 </header>
