--- a/resources/views/partials/menu/desktop/item-child.antlers.html
+++ b/resources/views/partials/menu/desktop/item-child.antlers.html
@@ -1,7 +1,7 @@
 <li>
   <a 
     href="{{ url }}" 
-    class=" {{ is_current || is_parent ? '' : '' }} block text-lemon w-full px-10"
+    class=" {{ is_current || is_parent ? '!underline' : '' }} block text-center no-underline hover:underline underline-offset-4 decoration-1 w-full px-10"
     title="{{ title }}">
     {{ title }}
   </a>
