--- a/resources/views/partials/menu/desktop/wrapper.antlers.html
+++ b/resources/views/partials/menu/desktop/wrapper.antlers.html
@@ -1,4 +1,4 @@
-<nav class="text-xs flex text-steel uppercase relative">
+<nav class="text-xs text-steel flex uppercase relative">
   <div class="mt-80 w-[calc(50%_-_100px)]">
     <ul class="flex justify-between">
       {{ nav:main }}
@@ -10,7 +10,7 @@
   </div>
   {{ partial:menu/home class="mt-20 mx-20" }}
   <div class="mt-80 w-[calc(50%_-_100px)]">
-    <ul class="flex justify-between">
+    <ul class=" flex justify-between">
       {{ nav:main }}
         {{ if index > 2 }}
           {{ partial:menu/desktop/item  }}
