--- a/resources/views/partials/menu/mobile/item-child.antlers.html
+++ b/resources/views/partials/menu/mobile/item-child.antlers.html
@@ -1,7 +1,7 @@
 <li>
   <a 
     href="{{ url }}" 
-    class=" {{ is_current || is_parent ? '' : '' }} block py-6"
+    class=" {{ is_current || is_parent ? '!underline' : '' }} block py-6"
     title="{{ title }}">
     {{ title }}
   </a>
