--- a/resources/views/partials/menu/mobile/wrapper.antlers.html
+++ b/resources/views/partials/menu/mobile/wrapper.antlers.html
@@ -7,7 +7,7 @@
   x-transition:leave="transition ease-in duration-0"
   x-transition:leave-start="opacity-100"
   x-transition:leave-end="opacity-0"
-  class="bg-steel text-xs text-lemon uppercase fixed top-0 left-0 w-full h-dvh overflow-y-auto">
+  class="bg-steel text-lemon text-xs uppercase fixed top-0 left-0 w-full h-dvh overflow-y-auto">
   <nav class="pt-70 pb-45 min-h-dvh w-full flex flex-col justify-between">
     <ul class="flex flex-col items-center space-y-10">
       {{ nav:main }}
