--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import "typo/webfonts.css";
+@import "fancybox.css";
 @import "theme.css";
 
 @tailwind base;
@@ -19,16 +20,34 @@ main p:last-child {
   @apply mb-0;
 }
 
+main ul {
+  @apply list-disc m-0 ml-16;
+}
+
+main ul p {
+  @apply mb-0 inline;
+}
+
+main li {
+  @apply mb-4
+}
+
 /* Text */
 h1 {
 
 }
 
 h2 {
+  @apply font-bold uppercase text-xl lg:text-2xl mb-10 lg:mb-20 tracking-wide
+}
+
+h3 {
+  @apply font-bold
 }
 
 em, i {
 }
+
 
 /* Helpers */
 .nobr {
