--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -1,3 +1,15 @@
 {{ if type == 'editor' }}
   {{ partial:components/editor }}
 {{ /if }}
+
+{{ if type == 'gallery' }}
+  {{ partial:components/media/gallery }}
+{{ /if }}
+
+{{ if type == 'header_visual' }}
+  {{ partial:components/media/header_visual }}
+{{ /if }}
+
+{{ if type == 'jobs' }}
+  {{ partial:components/misc/jobs }}
+{{ /if }}
