--- a/resources/views/partials/icons/chevron-down.antlers.html
+++ b/resources/views/partials/icons/chevron-down.antlers.html
@@ -1,3 +1,3 @@
 <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg" class="{{ class }}">
-<path d="M11 0.999999L6 6L1 1" stroke="#DEDF15" stroke-width="1.5"/>
+<path d="M11 0.999999L6 6L1 1" stroke="currentColor" stroke-width="1.5"/>
 </svg>
