--- a/resources/views/partials/icons/chevron-up.antlers.html
+++ b/resources/views/partials/icons/chevron-up.antlers.html
@@ -1,3 +1,3 @@
 <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg" class="{{ class }}">
-<path d="M1 7L6 2L11 7" stroke="#DEDF15" stroke-width="1.5"/>
+<path d="M1 7L6 2L11 7" stroke="currentColor" stroke-width="1.5"/>
 </svg>
