--- a/resources/views/partials/layout/header.antlers.html
+++ b/resources/views/partials/layout/header.antlers.html
@@ -5,7 +5,7 @@
   {{ /partial:layout/inner }}
 </header>
 {{# mobile header  #}}
-<header class="bg-white sticky top-0 w-full h-133 pt-30 px-20 z-100 lg:hidden">
+<header class="bg-white w-full h-133 pt-30 px-20 z-100 lg:hidden">
   <div class="relative">
     {{ partial:menu/home }}
     {{ partial:menu/mobile/button }}
