--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -6,10 +6,10 @@
   {{ partial:components/media/gallery }}
 {{ /if }}
 
-{{ if type == 'header_visual' }}
-  {{ partial:components/media/header_visual }}
-{{ /if }}
-
 {{ if type == 'jobs' }}
   {{ partial:components/misc/jobs }}
+{{ /if }}
+
+{{ if type == 'benefits' }}
+  {{ partial:components/misc/benefits }}
 {{ /if }}
