--- a/resources/views/partials/components/misc/shortcut_menu.antlers.html
+++ b/resources/views/partials/components/misc/shortcut_menu.antlers.html
@@ -2,7 +2,7 @@
   href="/dienstleistungen/gastronomie"
   title="Gastronomie"
   class="flex flex-col group absolute -bottom-65 sm:-bottom-75 lg:-bottom-95 right-10 lg:right-35 {{ class }}">
-  {{ partial:icons/menu class="block w-40 lg:w-60 h-auto group-hover:text-lemon" }}
+  {{ partial:icons/menu class="block w-40 lg:w-60 h-auto group-hover:text-lemon transition-all" }}
   <span class="block absolute bottom-0 translate-y-22 lg:translate-y-25 uppercase text-tiny lg:text-xxs tracking-wide text-lemon opacity-0 group-hover:opacity-100 transition-opacity text-center w-full">
     Menü
   </span>
