--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -13,3 +13,7 @@
 {{ if type == 'benefits' }}
   {{ partial:components/misc/benefits }}
 {{ /if }}
+
+{{ if type == 'intro' }}
+  {{ partial:components/misc/intro }}
+{{ /if }}
