--- a/resources/views/partials/components/editor.antlers.html
+++ b/resources/views/partials/components/editor.antlers.html
@@ -1,14 +1,16 @@
-{{ editor }}
+{{ partial:layout/inner }}
+  {{ editor }}
 
-  {{ if type == 'button' }}
+    {{ if type == 'button' }}
 
-    {{ partial:components/buttons/primary type="outline" }}
+      {{ partial:components/buttons/primary type="outline" }}
 
-  {{ else }}
+    {{ else }}
 
-    {{ text }}
+      {{ text }}
 
-  {{ /if }}
- 
-{{ /editor }}
+    {{ /if }}
+  
+  {{ /editor }}
+{{ /partial:layout/inner }}
 
