--- a/resources/views/partials/components/misc/intro.antlers.html
+++ b/resources/views/partials/components/misc/intro.antlers.html
@@ -2,23 +2,28 @@
 <div class="md:flex w-full mt-50 lg:mt-80 mb-40 lg:mb-60">
   <div class="md:w-[55%] overflow-hidden">
     {{ title }}
-    <div class="flex items-center w-full">
-      <div class="flex flex-col justify-between shrink-0 w-[30%] lg:w-[50%] 2xl:w-[55%] 3xl:w-[65%] mr-10 lg:mr-20">
-        <div class="w-full h-8 lg:h-12 bg-lemon mb-7"></div>
-        <div class="w-full h-8 lg:h-12 bg-lemon"></div>
+      <div class="flex items-center w-full">
+        <div class="flex flex-col justify-between shrink-0 w-[30%] lg:w-[50%] 2xl:w-[55%] 3xl:w-[65%] mr-10 lg:mr-20">
+          <div class="w-full h-8 lg:h-12 bg-lemon mb-7"></div>
+          <div class="w-full h-8 lg:h-12 bg-lemon"></div>
+        </div>
+        <div class="text-3xl lg:text-4xl leading-none font-bold uppercase text-lemon whitespace-nowrap md:w-[40%] mt-2">
+          {{ title_line }}
+        </div>
       </div>
-      <div class="text-3xl lg:text-4xl leading-none font-bold uppercase text-lemon whitespace-nowrap md:w-[40%]">
-        {{ title_line }}
-      </div>
-    </div>
     {{ /title }}
   </div>
   {{ editor }}
     <div class="md:w-[45%] mt-40 md:mt-0 px-20">
       <div class="max-w-[440px]">
-        {{ partial:components/editor }}
+        {{ editor }}
+          {{ if type == 'button' }}
+            {{ partial:components/buttons/primary type="outline" }}
+          {{ else }}
+            {{ text }}
+          {{ /if }}
+        {{ /editor }}
       </div>
     </div>
   {{ /editor}}
-
 </div>
