--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -17,3 +17,7 @@
 {{ if type == 'intro' }}
   {{ partial:components/misc/intro }}
 {{ /if }}
+
+{{ if type == 'team' }}
+  {{ partial:components/misc/team }}
+{{ /if }}
