--- a/resources/views/partials/components/misc/benefits.antlers.html
+++ b/resources/views/partials/components/misc/benefits.antlers.html
@@ -4,7 +4,7 @@
       <div class="col-span-6 md:col-span-4 lg:col-span-2">
         <figure class="mb-10 relative group aspect-square">
           <img src="{{ illustration:url }}" width="400" height="400" alt="{{ illustration:alt }}" class="w-full h-auto aspect-square object-cover">
-          <figcaption class="absolute inset-0 z-10 opacity-0 flex items-center grow-0 justify-center text-center text-xs p-20 bg-vanilla group-hover:opacity-100 transition-opacity">
+          <figcaption class="absolute inset-0 z-10 opacity-0 flex items-center grow-0 justify-center text-center text-xs p-20 bg-vanilla group-hover:cursor-default group-hover:opacity-100 transition-opacity">
             {{ text }}
           </figcaption>
         </figure>
