--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -21,3 +21,11 @@
 {{ if type == 'team' }}
   {{ partial:components/misc/team }}
 {{ /if }}
+
+{{ if type == 'downloads' }}
+  {{ partial:components/misc/downloads }}
+{{ /if }}
+
+{{ if type == 'teaser_image_text' }}
+  {{ partial:components/teaser/image_text }}
+{{ /if }}
