--- a/resources/views/partials/components/misc/intro.antlers.html
+++ b/resources/views/partials/components/misc/intro.antlers.html
@@ -1,13 +1,13 @@
 
-<div class="md:flex w-full {{ header_image ? 'mt-50 lg:mt-80' : 'mt-80 lg:mt-120' }} mb-60 lg:mb-80">
+<div class="md:flex w-full {{ header_image ? 'mt-50 lg:mt-80' : 'mt-80 lg:mt-120' }} mb-60 lg:mb-80 ">
   <div class="md:w-[55%] overflow-hidden">
     {{ title }}
-      <div class="flex items-center w-full">
+      <div class="flex items-center w-full leading-none">
         <div class="flex flex-col justify-between shrink-0 w-[30%] lg:w-[50%] 2xl:w-[55%] 3xl:w-[65%] mr-10 lg:mr-20">
-          <div class="w-full h-8 lg:h-12 bg-lemon mb-7"></div>
-          <div class="w-full h-8 lg:h-12 bg-lemon"></div>
+          <div class="w-full h-8 lg:h-11 bg-lemon mb-8 lg:mb-10"></div>
+          <div class="w-full h-8 lg:h-11 bg-lemon"></div>
         </div>
-        <div class="text-3xl lg:text-4xl leading-none font-bold uppercase text-lemon whitespace-nowrap md:w-[40%] mt-2">
+        <div class="text-3xl lg:text-4xl font-bold uppercase text-lemon whitespace-nowrap md:w-[40%] mt-2">
           {{ title_line }}
         </div>
       </div>
