--- a/resources/views/partials/components/misc/benefits.antlers.html
+++ b/resources/views/partials/components/misc/benefits.antlers.html
@@ -8,7 +8,7 @@
             {{ text }}
           </figcaption>
         </figure>
-        <h3 class="text-center uppercase">{{ title }}</h3>
+        <h3 class="text-center">{{ title }}</h3>
       </div>
     {{ /benefit }}
   </div>
