--- a/resources/views/partials/components/misc/downloads.antlers.html
+++ b/resources/views/partials/components/misc/downloads.antlers.html
@@ -1,7 +1,7 @@
 {{ partial:layout/inner }}
   <section class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-40">
     {{ download_group }}
-      <article class="mb-30 sm:mb-0 sm:col-span-4">
+      <article class="mb-30 sm:mb-0 sm:col-span-6 md:col-span-4">
         <h2>{{ title }}</h2>
         {{ files }}
         <div>
@@ -10,7 +10,7 @@
             :button_link="file" 
             :button_text="title"
             target="_blank"
-            class="px-20 lg:px-30 mb-12" }}
+            class="mb-12" }}
           </div>
         {{ /files }}
       </article>
