--- a/resources/views/partials/components/misc/team.antlers.html
+++ b/resources/views/partials/components/misc/team.antlers.html
@@ -10,7 +10,7 @@
           class="w-full h-auto object-cover"
           preset="focal-16-10" }}
           <div class="mt-10 lg:mt-20">
-            <h3 class="text-md lg:text-lg mb-3 uppercase">{{ name }}</h3>
+            <h3 class="text-md lg:text-lg mb-3">{{ name }}</h3>
             <strong>{{ role }}</strong>
           </div>
       </article>
