--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -30,6 +30,10 @@
   {{ partial:components/misc/downloads }}
 {{ /if }}
 
+{{ if type == 'news' }}
+  {{ partial:components/misc/news }}
+{{ /if }}
+
 {{ if type == 'teaser_image_text' }}
   {{ partial:components/teaser/image_text }}
 {{ /if }}
