--- a/resources/views/partials/elements.antlers.html
+++ b/resources/views/partials/elements.antlers.html
@@ -38,6 +38,6 @@
   {{ partial:components/teaser/image_text }}
 {{ /if }}
 
-{{ if type == 'contact_form'}}
-  {{ partial:forms/wrapper}}
+{{ if type == 'contact_form' }}
+  {{ partial:forms/contact_forms }}
 {{ /if }}
