--- a/resources/views/partials/components/misc/news.antlers.html
+++ b/resources/views/partials/components/misc/news.antlers.html
@@ -15,9 +15,9 @@
             <h4 class="font-bold mb-2">{{ name }}</h4>
           {{ /if }}
           {{ if phone || email }}
-          <div class="lg:flex lg:space-x-15">
+          <div class="flex flex-col space-y-2">
             {{ if phone }}
-              <div class="mb-2 lg:mb-0">Telefon: <a href="tel:{{ phone }}">{{ phone }}</a></div>
+              <div>Telefon: <a href="tel:{{ phone }}">{{ phone }}</a></div>
             {{ /if }}
             {{ if email }}
               <div>E-Mail: <a href="mailto:{{ email }}">{{ email }}</a></div>
