--- a/resources/css/forms.css
+++ b/resources/css/forms.css
@@ -6,32 +6,14 @@ select {
   @apply w-full text-steel py-5 border-b border-b-lemon !ring-0 focus:outline-none focus:!ring-0 focus:text-steel
 }
 
-.has-error input[type=text],
-.has-error input[type=email],
-.has-error input[type=tel],
-.has-error textarea,
-.has-error select {
-  @apply bg-white
-}
-
-.has-error label {
-  @apply text-red-600
-}
-
-.has-error input[type=text],
-.has-error input[type=email],
-.has-error input[type=tel],
-.has-error textarea,
-.has-error select {
-  @apply border-b-red-600
-}
-
 select {
   @apply block w-full text-steel !py-5 appearance-none bg-right-center bg-white bg-dropdown bg-no-repeat accent-transparent
 }
 
 textarea {
-  @apply min-h-[80px] lg:min-h-[160px] border border-lemon !p-5 block;
+  @apply min-h-[80px] border border-lemon !p-5 block;
+  field-sizing: content;
+  resize: vertical;
 } 
 
 .checkboxes label {
@@ -55,4 +37,24 @@ textarea {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 14px;
+}
+
+.has-error input[type=text],
+.has-error input[type=email],
+.has-error input[type=tel],
+.has-error textarea,
+.has-error select {
+  @apply bg-white
+}
+
+.has-error label {
+  @apply text-red-600
+}
+
+.has-error input[type=text],
+.has-error input[type=email],
+.has-error input[type=tel],
+.has-error textarea,
+.has-error select {
+  @apply border-b-red-600
 }
