--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,10 +34,7 @@ main li {
 }
 
 /* Text */
-h1 {
-
-}
-
+h1, 
 h2 {
   @apply font-bold uppercase text-xl lg:text-2xl mb-10 lg:mb-20 tracking-wide
 }
