--- a/resources/views/partials/components/teaser/text.antlers.html
+++ b/resources/views/partials/components/teaser/text.antlers.html
@@ -1,10 +1,6 @@
 <article class="sm:col-span-6 {{ class }}">
   <h2>{{ title }}</h2>
   {{ editor }}
-    {{ if type == 'button' }}
-      {{ partial:components/buttons/primary type="outline" }}
-    {{ else }}
-      {{ text }}
-    {{ /if }}
+    {{ partial:components/editor }}
   {{ /editor }}
 </article>
