--- a/resources/views/partials/components/misc/news.antlers.html
+++ b/resources/views/partials/components/misc/news.antlers.html
@@ -31,11 +31,7 @@
       <div class="sm:col-span-6 lg:col-span-7">
         <h3 class="mb-5 max-w-[440px] text-balance">{{ title }}</h3>
         {{ editor }}
-          {{ if type == 'button' }}
-            {{ partial:components/buttons/primary type="outline" }}
-          {{ else }}
-            {{ text }}
-          {{ /if }}
+          {{ partial:components/editor }}
         {{ /editor }}
       </div>
     </article>
