--- a/resources/views/partials/components/teaser/image.antlers.html
+++ b/resources/views/partials/components/teaser/image.antlers.html
@@ -6,7 +6,9 @@
       class="w-full h-auto object-cover"
       preset="focal-16-10" }}
     <span class="bg-lemon w-12 h-156 absolute -bottom-84 left-36 before:content-[''] before:block before:absolute before:w-12 before:bg-lemon before:h-156 before:-left-24 before:bottom-0 after:content-[''] after:block after:absolute after:w-12 after:bg-lemon after:h-156 after:left-24 after:bottom-0"></span>
-    {{ partial:components/buttons/primary type="outline" class="absolute -bottom-84 left-90 px-30" }}
+    {{ if button }}
+      {{ partial:components/buttons/primary type="outline" class="absolute -bottom-84 left-90 px-30" }}
+    {{ /if }}
     </div>
   </figure>
 {{ else }}
@@ -17,7 +19,9 @@
         class="w-full h-auto object-cover"
         preset="focal-16-10" }}
       <span class="bg-lemon w-12 h-156 absolute -bottom-84 right-36 before:content-[''] before:block before:absolute before:w-12 before:bg-lemon before:h-156 before:-right-24 before:bottom-0 after:content-[''] after:block after:absolute after:w-12 after:bg-lemon after:h-156 after:right-24 after:bottom-0"></span>
-      {{ partial:components/buttons/primary type="outline" class="absolute -bottom-84 right-90" }}
+      {{ if button }}
+        {{ partial:components/buttons/primary type="outline" class="absolute -bottom-84 right-90" }}
+      {{ /if }}
     </div>
   </figure>
 {{ /if }}
