--- a/resources/views/partials/menu/desktop/item.antlers.html
+++ b/resources/views/partials/menu/desktop/item.antlers.html
@@ -7,8 +7,7 @@
     {{ title }}
   </a>
   {{ if children }}
-  <ul class="absolute bg-steel w-max max-w-[180px] invisible group-hover:visible left-1/2 transform -translate-x-1/2 opacity-0 -z-1 group-hover:text-lemon group-hover:py-20 group-hover:pt-50 group-hover:-top-15 space-y-15 group-hover:opacity-100 hyphens-auto">
-
+  <ul class="absolute bg-steel w-180 invisible group-hover:visible left-1/2 transform -translate-x-1/2 opacity-0 -z-1 group-hover:text-lemon group-hover:py-20 group-hover:pt-50 group-hover:-top-15 space-y-15 group-hover:opacity-100 hyphens-auto">
       {{ children }}
         {{ partial:menu/desktop/item-child }}
       {{ /children }}
