--- a/resources/views/partials/components/buttons/primary.antlers.html
+++ b/resources/views/partials/components/buttons/primary.antlers.html
@@ -1,4 +1,4 @@
-<div class="btn-container">
+<div class="btn-container {{ wrapperClass}}">
   <a 
     href="{{ button_link }}" 
     title="{{ button_text }}"
