--- a/resources/views/events/index.antlers.html
+++ b/resources/views/events/index.antlers.html
@@ -1,14 +1,35 @@
 
+{{ if shortcut_jobs || shortcut_menu }}
+  <div class="absolute top-100 right-0 bg-red-100">
+    {{ if shortcut_jobs }}
+      {{ partial:components/misc/shortcut_jobs }}
+    {{ /if }}
+    {{ if shortcut_menu }}
+      {{ partial:components/misc/shortcut_menu }}
+    {{ /if }}
+  </div>
+{{ /if }}
+
 {{ page_elements }}
   {{ partial:elements }}
 {{ /page_elements }}
 
 {{ partial:layout/inner }}
-{{ collection from="events" as="events" sort="order" }}
-  <div class="sm:grid sm:grid-cols-12 sm:gap-x-20">
-    {{ events }} 
-      {{ partial:events/teaser }}
-    {{ /events }}
-  </div>
+  <h2>Kommende Aktivitäten</h2>
+  {{ collection from="events" as="events" sort="event_date:desc" event_date:is_after="now" }}
+    <div class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-60">
+      {{ events }} 
+        {{ partial:events/teaser }}
+      {{ /events }}
+    </div>
+  {{ /collection }}
+
+  <h2 class="mt-60 lg:mt-90">vergangene Aktivitäten</h2>
+  {{ collection from="events" as="events" sort="event_date:desc" event_date:is_before="now" }}
+    <div class="sm:grid sm:grid-cols-12 sm:gap-x-20 sm:gap-y-30 lg:gap-y-60">
+      {{ events }} 
+        {{ partial:events/teaser }}
+      {{ /events }}
+    </div>
   {{ /collection }}
 {{ /partial:layout/inner }}
