--- a/resources/views/partials/layout/body.antlers.html
+++ b/resources/views/partials/layout/body.antlers.html
@@ -1,4 +1,4 @@
-<body class="antialiased text-steel text-sm leading-[1.35] font-roboto-condensed-regular flex min-h-screen flex-col">
+<body class="antialiased text-steel text-sm leading-[1.35] font-roboto-condensed flex min-h-screen flex-col">
   {{ slot:header }}
   {{ slot }}
   {{ slot:footer }}
