--- a/resources/views/partials/components/misc/services.antlers.html
+++ b/resources/views/partials/components/misc/services.antlers.html
@@ -8,7 +8,7 @@
             href="{{ link }}"
             title="{{ title }}">
             <img src="{{ illustration:url }}" width="400" height="400" alt="{{ illustration:alt }}" class="mb-15 w-full h-auto aspect-square object-cover group-hover:scale-110 transition-transform transition-duration-500">
-            <h3 class="text-center group-hover:text-white transition-colors transition-duration-500">
+            <h3 class="text-center">
               {{ title }}
             </h3>
           </a>
