--- a/resources/views/partials/components/misc/jobs.antlers.html
+++ b/resources/views/partials/components/misc/jobs.antlers.html
@@ -1,5 +1,5 @@
 {{ partial:layout/inner }}
-  
+  <a name="offene-stellen" class="scroll-mt-125"></a>
   <h2>{{ "Offene Stellen" | trans }}</h2>
 
   {{ collection from="jobs" as="jobs" }}
