--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,12 +17,12 @@ main p {
   @apply mb-15 md:mb-20 lg:mb-25
 }
 
-main p:last-child {
+/* main p:last-child {
   @apply mb-0;
-}
+} */
 
 main ul {
-  @apply list-disc m-0 ml-16;
+  @apply list-disc m-0 ml-16 mb-15 md:mb-20 lg:mb-25;
 }
 
 main ul p {
